# helios

./: LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/src/core/: config.py  db.py  security.py
backend/src/features/auth/: controller.py  schemas.py  services.py
backend/src/features/carpetas/: controller.py  models.py  schemas.py  services.py
backend/src/features/clientes/: controller.py  schemas.py  services.py
backend/src/features/dashboard/: controller.py  schemas.py  services.py
backend/src/features/documentos/: controller.py  models.py  schemas.py  services.py
backend/src/features/proyectos/: controller.py  models.py  schemas.py  services.py
backend/src/features/tareas/: controller.py  models.py  schemas.py  services.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  index.css  theme.css
frontend/src/api/: auth.js  carpetas.js  client.js  clientes.js  dashboard.js  documentos.js  proyectos.js  tareas.js  usuarios.js
frontend/src/components/: ActivityDrawer.jsx  ActivityDrawer.module.css  PageContainer.jsx  PageContainer.module.css  Sidebar.jsx  Sidebar.module.css
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/layouts/: DashboardLayout.jsx  DashboardLayout.module.css
frontend/src/routes/: AppRoutes.jsx  PrivateRoute.jsx
frontend/src/styles/: shared.module.css
src/core/: config.py  db.py
src/features/auth/: controller.py  models.py  schemas.py  services.py
(+29 files in other folders)
