[project]
name = "helios"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4.1",
    "litestar[sqlalchemy]>=2.23.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]